        PR 9874         * config/tc-ia64.c (fix_insn): Fix warning reported by         -Wformat-security.